# gaussian-init

./: .gitignore  README.md  pyproject.toml
configs/: gsplat_compare_48.yaml  gsplat_train.yaml  log_ellipse.yaml  v0_uniform.yaml  v1_salient_pca.yaml  v2_fusion.yaml  v3_full.yaml
docs/: environment.md  index.html
docs/assets/: site.css  site.js
gsplat_train/: __init__.py  benchmark.py  checkpoint.py  dataset.py  eval.py  loss.py  model.py  render.py  train.py
init/: __init__.py  build_colmap_init.py  build_init.py  continuity.py  ellipses.py  filters.py  fusion.py  gaussian_params.py  grid_supplement.py  io.py  knn.py  patch.py  pca.py  regions.py  sampling.py  types.py
preprocess/: __init__.py  export_vggt_geometry.py  run_colmap.py  run_vggt.py
report/: technical_report_en.tex
requirements/: base.txt  constraints.txt  dev.txt  gsplat.txt  vggt.txt
result/: dataset_manifest.json
scripts/: build_init.sh  compare_gsplat_runs.py  eval.sh  pipeline_runner_utils.py  prepare_tnt_truck.py  render_gaussian_orbit.py  render_gsplat_progress_gif.py  run_colmap_pipeline.py  run_dense_gif_comparison.py  run_vggt.sh  train.sh  verify_env.py  view_ellipse_merging.py  view_ellipses.py  view_gaussians.py  view_log_sampling.py  view_vggt.py
tests/: test_build_init.py  test_colmap_pipeline.py  test_compare_gsplat_runs.py  test_ellipse_covariance.py  test_grid_supplement.py  test_gsplat_train.py  test_io.py  test_log_ellipses.py  test_pca_init.py  test_pipeline_runner_utils.py  test_prepare_tnt_truck.py  test_preprocess_mask.py  test_vggt_integration.py  test_view_ellipse_merging.py  test_view_ellipses.py  test_view_gaussians.py  test_view_log_sampling.py
