[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vggt-pca-gsplat"
version = "0.1.0"
description = "VGGT dense geometry to PCA-initialized Gaussians for gsplat."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy==1.26.1",
  "Pillow>=9.0",
  "PyYAML>=6.0",
  "requests>=2.31",
  "torch==2.3.1",
  "torchvision==0.18.1",
  "vggt",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.6",
]

[tool.setuptools]
packages = ["preprocess", "init", "gsplat_train"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
vggt = { path = "external/vggt", editable = true }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
