[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vggt-pca-gsplat"
version = "0.1.0"
description = "VGGT geometry to multichannel Lab LoG-ellipse Gaussian initialization."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "numpy==1.26.1",
  "Pillow>=9.0",
  "PyYAML>=6.0",
  "requests>=2.31",
  "torch==2.3.1",
  "torchvision==0.18.1",
  "viser==1.0.30",
  "vggt",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.6",
]
train = [
  "gsplat==1.5.3+pt23cu121",
  "setuptools>=68",
]

[tool.setuptools]
packages = ["preprocess", "init", "gsplat_train"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
vggt = { path = "external/vggt", editable = true }
gsplat = { index = "gsplat-pt23cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "gsplat-pt23cu121"
url = "https://docs.gsplat.studio/whl/pt23cu121"
explicit = true
